# duolingo_checker

./: .gitignore  .travis.yml  Cargo.toml  README.md  duolingo.py  test  words.txt
src/: cli.yaml  lib.rs  main.rs
